trips.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "trips"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips 
    spec:
      containers:
        - name: "trips"
          image: "registryrzr0385.azurecr.io/tripinsights/trips:1.0"  
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: "trips"
    labels:
        app: "trips"
spec:
    type: LoadBalacer
    ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "trips"
