user-java.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "user-java"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
        - name: "user-java"
          image: "registryrzr0385.azurecr.io/tripinsights/user-java:1.0"
          ports:
          - containerPort: 80
          readinessProbe:
            httpGet:
              path: /api/user-java/healthcheck
              port: 80
            periodSeconds: 30
            timeoutSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
    name: "user-java"
    labels:
        app: "user-java"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "user-java"
