user.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "user"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user 
    spec:
      containers:
        - name: "user"
          image: "registryrzr0385.azurecr.io/tripinsights/user-java:1.0"  
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: "user"
    labels:
        app: "user"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "user"
